# megamol

./: CMakeExternals.cmake  CMakeLists.txt
console/: CMakeLists.txt
console/console_gl/src/: Console.cpp  WindowManager.cpp
core/: CMakeLists.txt
core/core_gl/Shaders/: sphere.slvp
core/core_gl/include/mmcore/: DeferredShading.h  FlagCall_GL.h  FlagCollection_GL.h  FlagStorage_GL.h
core/core_gl/include/mmcore/moldyn/: AddClusterColours.h  AddParticleColours.h
core/core_gl/include/mmcore/utility/: SDFFont.h  SSBOBufferArray.h  SSBOStreamer.h  ShaderSourceFactory.h
core/core_gl/include/mmcore/view/: BoundingBoxRenderer.h  CallGetTransferFunction_gl.h  RenderDeferredOutput.h  RenderOutputOpenGL.h  SplitView.h  TransferFunctionUtility_gl.h
core/core_gl/include/mmcore/view/special/: AnaglyphStereoView.h  TitleRenderer.h
core/core_gl/src/: DeferredShading.cpp
core/core_gl/src/moldyn/: AddClusterColours.cpp  AddParticleColours.cpp
core/core_gl/src/utility/: KHR.cpp
core/core_gl/src/view/: BoundingBoxRenderer.cpp  CallGetTransferFunction_gl.cpp  HeadView.cpp  SplitView.cpp  TransferFunction.cpp  View2D.cpp
core/core_gl/src/view/special/: AnaglyphStereoView.cpp  ChronoGraph.cpp  DemoRenderer2D.cpp  MegaMolLogo.cpp  QuadBufferStereoView.cpp  ScreenShooter.cpp  TitleRenderer.cpp
core/include/mmcore/: CoreInstance.h
core/include/mmcore/io/: AbstractDataIO.h
core/include/mmcore/view/: AbstractCallRender.h  AbstractView.h  CallGetTransferFunction.h  CallRender3D_2.h  CallRenderView.h  Renderer2DModule.h  TileView.h  TransferFunctionUtility.h  View3D_2.h
core/src/: Call.cpp  CoreInstance.cpp  MegaMolCore.cpp  Module.cpp
core/src/factories/: CallClassRegistry.cpp  ModuleClassRegistry.cpp
core/src/utility/: Configuration.cpp
core/src/view/: AbstractRenderingView.cpp  CallGetTransferFunction.cpp  CallRender3D_2.cpp  CallRenderView.cpp  Renderer3DModule_2.cpp  TileView.cpp  TransferFunction.cpp  View3D_2.cpp
input_events/: CMakeLists.txt
input_events/include/: UILayersCollection.hpp
main3000/: CMakeLists.txt
main3000/src/: main.cpp
plugins/OSPRaySES/: CMakeLists.txt
plugins/OSPRaySES/Shaders/: ospray_ses.btf
plugins/OSPRaySES/src/: AbstractOSPRaySESRenderer.cpp  AbstractOSPRaySESRenderer.h  AbstractOSPRayTestRenderer.cpp  AbstractOSPRayTestRenderer.cpp~RF4ae7f6.TMP  AbstractOSPRayTestRenderer.h  CBTest.cpp  CBTest.h  Common.h  Grid.h  OSPRayInstancedSESRenderer.cpp  OSPRayInstancedSESRenderer.h  OSPRayPrimitives.h  OSPRaySES.cpp  OSPRaySESCellGeometry.cpp  OSPRaySESCellGeometry.h  OSPRaySESGeometry.cpp  OSPRaySESGeometry.h  OSPRaySESModuleLoader.cpp  OSPRaySESModuleLoader.h  OSPRaySESRenderer.cpp  OSPRaySESRenderer.h  stdafx.h
plugins/OSPRay_plugin/: CMakeLists.txt
plugins/OSPRay_plugin/src/: AbstractOSPRayRenderer.cpp  AbstractOSPRayRenderer.h  OSPRayRenderer.cpp  OSPRayRenderer.h  OSPRay_plugin.cpp
plugins/adios_plugin/: CMakeLists.txt
plugins/archvis/src/: ArchVisMSMDataSource.cpp
plugins/cinematic/src/: CinematicUtils.h  CinematicView.h  KeyframeManipulators.h  ReplacementRenderer.cpp  ReplacementRenderer.h  TimeLineRenderer.h  TrackingShotRenderer.h
plugins/compositing_gl/src/: DrawToScreen.cpp  DrawToScreen.h  LocalLighting.cpp  LocalLighting.h  ScreenSpaceEffect.cpp  ScreenSpaceEffect.h  TextureCombine.cpp  TextureCombine.h  TextureDepthCompositing.cpp  TextureDepthCompositing.h
plugins/geometry_calls/: CMakeLists.txt
plugins/geometry_calls/src/: geometry_calls.cpp
plugins/gui/: CMakeLists.txt
plugins/infovis/src/: HistogramRenderer2D.cpp  HistogramRenderer2D.h  ParallelCoordinatesRenderer2D.cpp  ParallelCoordinatesRenderer2D.h  Renderer2D.cpp  Renderer2D.h  ScatterplotMatrixRenderer2D.h
plugins/mesh/src/: 3DUIRenderTaskDataSource.cpp  GPUMaterialCollection.cpp  RenderMDIMesh.cpp  RenderMDIMesh.h
plugins/mmstd_datatools/: CMakeLists.txt
plugins/mmstd_datatools/src/: ParticleSortFixHack.cpp  ParticleThermodyn.cpp  mmstd_datatools.cpp
plugins/mmstd_trisoup/src/: TriSoupRenderer.cpp  mmstd_trisoup.cpp
plugins/mmstd_volume/src/: RaycastVolumeRenderer.cpp  RaycastVolumeRenderer.h  VolumeSliceRenderer.cpp  VolumeSliceRenderer.h  slicing.cpp  slicing.h
plugins/protein/src/: CartoonRenderer.h  CartoonTessellationRenderer2000GT.h  Diagram2DCall.h  Diagram2DRenderer.h  DiagramRenderer.h  DofRendererDeferred.h  GLSLVolumeRenderer.h  GlButton.cpp  LayeredIsosurfaceRenderer.cpp  LayeredIsosurfaceRenderer.h  MoleculeCartoonRenderer.h  MoleculeSESRenderer.h  PDBCellLoader.cpp  PDBCellLoader.h  PDBLoader.cpp  PDBLoader.h  Protein.cpp  SSAORendererDeferred.cpp  SimpleMoleculeRenderer.cpp  SplitMergeRenderer.h  ToonRendererDeferred.cpp  TrajectorySmoothFilter.cpp  TrajectorySmoothFilter.h  UnstructuredGridRenderer.h  VariantMatchRenderer.h  VolumeDirectionRenderer.h  VolumeSliceCall.h  VolumeSliceRenderer.h  slicing.cpp  slicing.h
plugins/protein_calls/src/: Protein_Calls.cpp
plugins/pwdemos/src/: AOSphereRenderer.cpp  AOSphereRenderer.h  AbstractBezierRenderer.cpp  AbstractBezierRenderer.h  (+11 more)
plugins/remote/: CMakeLists.txt
render_api/: CMakeLists.txt
render_api/include/: GenericRenderAPI.hpp
render_api/render_api_gl/src/: OpenGL_GLFW_RAPI.hpp
render_api/src/: GenericRenderAPI.cpp  UILayersCollection.hpp
vislib/: CMakeLists.txt
vislib/include/vislib/sys/: CmdLineParser.h
vislib/src/sys/: Process.cpp  RegistryKey.cpp  Thread.cpp
vislib/vislib_gl/include/vislib/graphics/: ARBShader.h  AbstractOpenGLShader.h  AbstractOpenGLTexture.h  ExtensionsDependent.h  FramebufferObject.h  GLSLComputeShader.h  GLSLGeometryShader.h  GLSLShader.h  GLSLTesselationShader.h  OpenGLException.h  OpenGLTexture2D.h  glverify.h
vislib/vislib_gl/src/graphics/: ARBShader.cpp  AbstractOpenGLShader.cpp  AbstractOpenGLTexture.cpp  CameraOpenGL.cpp  ExtensionsDependent.cpp  FramebufferObject.cpp  GLSLComputeShader.cpp  GLSLGeometryShader.cpp  GLSLShader.cpp  GLSLTesselationShader.cpp  OpenGLException.cpp  OpenGLTexture2D.cpp  OpenGLVISLogo.cpp  OutlineFont.cpp  ShaderSource.cpp  SimpleFont.cpp  glfunctions.cpp  glverify.cpp
(+25 files in other folders)
